--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ body {
   font-family: Arial, sans-serif;
   color: #afb209; 
 } 
+
+body {
+  font-family: OCR A Std, monospace;
+  color: #8b008b;
+}
