--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   font-family: Arial, sans-serif;
   color: #afb209; 
-} 
+} body
 
 body {
   font-family: OCR A Std, monospace;
   color: #8b008b;
-}
+} body
